05-network-policies/notification-np-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    app: notification
spec:
  podSelector: {}
  policyTypes:
    - Ingress
