05-network-policies/notification-ui-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-ui-np
  labels:
    app: notification
spec:
  podSelector:
    matchLabels:
      component: notification-ui
  policyTypes:
    - Ingress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 80
